implemented check for audio file

--- a/pihome.conf
+++ b/pihome.conf
@@ -4,3 +4,5 @@ bitsize = 1024
 	lm = '/home/pi/voicerecognition/languagemodel.lm'
 	dict = '/home/pi/voicerecognition/dictionary.dic'
 	log = '/dev/null'
+[command]
+	audiofile = './backend/uploads/userCommand.wav'
