Moved hardcoded code to config

--- a/pihome.conf
+++ b/pihome.conf
@@ -1,8 +1,13 @@
-bitsize = 1024
+[backend]
+	url = 'http://localhost:8080/api/cmd/validate'
+[audio]
+	bitsize = 1024
+	buffersize = 2048
+	channels = 1
+	samplerate = 16000
+	audiofile = './backend/uploads/userCommand.wav'		
 [pocketsphinx]
-	hmm = '/home/pi/piHome/pocketsphinx/model/en-us/en-us'
-	lm = '/home/pi/voicerecognition/languagemodel.lm'
-	dict = '/home/pi/voicerecognition/dictionary.dic'
+	hmm = '../pocketsphinx/model/en-us/en-us'
+	lm = './languagemodel.lm'
+	dict = './dictionary.dic'
 	log = '/dev/null'
-[command]
-	audiofile = './backend/uploads/userCommand.wav'
