--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.4",
     "express": "^4.14.0",
+    "lgtv2": "^1.4.1",
     "multer": "^1.2.0",
     "ps4-waker": "^1.4.3",
     "require-dir": "^0.3.1",
